--- a/devbuddy/templates/base.html
+++ b/devbuddy/templates/base.html
@@ -15,10 +15,19 @@
     {% endblock css %}
 </head>
 <body>
-    Bootstrap is working
+    <div class="container-fluid"> 
+            <div>
+                <h1 class="text-white text-center">
+                    Github Login
+                </h1>
+                <div class="card p-5">
+                    {% block home %}
+                    {% endblock %} 
+                </div>
+            </div>
+    </div>
     {% block content %}
-    {% endblock content %}
-
+    {% endblock %} 
     <script src="{% static 'js/base.js' %}"></script>
     {% block scripts %}
     {% endblock %}
