Update on Organization

--- a/devbuddy/register/templates/authenticate/registerOrg.html
+++ b/devbuddy/register/templates/authenticate/registerOrg.html
@@ -8,6 +8,8 @@
 <P>Organization Name: <INPUT TYPE="TEXT" NAME="orgName" SIZE="30"></P>
 <p>Organization Email</p><INPUT NAME="orgEmail" VALUE="">
 <p>Organization Location</p><INPUT NAME="orgLoc" VALUE="">
+<p>Password</p><INPUT NAME="orgPass" VALUE="">
+<p>Confirm Password</p><INPUT NAME="orgPassConfirm" VALUE="">
 </FORM>
 </BODY>
 </HTML>
