--- a/devbuddy/base/templates/base/home.html
+++ b/devbuddy/base/templates/base/home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %} 
-{% block title %}HOME{% endblock %} 
+{% block title %}
+<title>DevBuddy | Home</title>
+{% endblock %} 
 {% block home %} 
 {% comment %} show messages from django {% endcomment %}
 {% if messages %}
