--- a/devbuddy/register/templates/authenticate/login.html
+++ b/devbuddy/register/templates/authenticate/login.html
@@ -5,11 +5,7 @@
 {% block content %} 
     <div class="row">
         <div class="col-md-8 mx-auto social-container my-2 order-md-1">
-            <button class="btn btn-primary mb-2">
-                <a href="{% url 'social:begin' 'github' %}">
-                    LOGIN WITH GITHUB 
-                </a>
-            </button>
+            login thru navbar link
         </div>
     </div>
 {% endblock %}
