--- a/devbuddy/templates/base.html
+++ b/devbuddy/templates/base.html
@@ -11,23 +11,35 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.tailwindcss.com"></script>
     {% block css %}
     {% endblock css %}
 </head>
 <body>
-    <div class="container-fluid"> 
-            <div>
-                <h1 class="text-white text-center">
-                    Github Login
-                </h1>
-                <div class="card p-5">
-                    {% block home %}
-                    {% endblock %} 
-                </div>
-            </div>
-    </div>
+    {% block navbar %}
+        <nav>
+        <div class="navbar-left">
+            <a href="{% url 'home' %}">
+                <img src="{% static 'assets/github-mark-white.png' %}" alt="DevBuddy Logo">
+                <span>DevBuddy</span>
+            </a>
+        </div>
+        <div class="navbar-right">
+            <ul>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'logout' %}" class="btn btn-success">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'social:begin' 'github' %}" class="btn btn-success">Login</a></li>
+                    <li><a href="#" class="btn btn-success">Sign Up</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+    {% endblock navbar %}
+
     {% block content %}
     {% endblock %} 
+
     <script src="{% static 'js/base.js' %}"></script>
     {% block scripts %}
     {% endblock %}
