--- a/devbuddy/base/templates/base/displayteams.html
+++ b/devbuddy/base/templates/base/displayteams.html
@@ -4,7 +4,7 @@
 <title>DevBuddy | {{username}}</title> 
 {% endblock %} 
 {% block css %}  {% endblock %}
-{% block content %}
+{% block left %}
  <!-- make a bs5 table for all the teams -->
     <div class="container">
         <div class="row">
@@ -39,4 +39,4 @@
                 </table>
             </div>
         </div>
-{% endblock%}
+{% endblock left %}
