--- a/devbuddy/base/templates/base/chat.html
+++ b/devbuddy/base/templates/base/chat.html
@@ -1,42 +1,42 @@
 {% extends "base.html" %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/chat.css' %}">
+{% block left %}
+    <div class="chat-window">
+  <div class="chat-messages">
+    <div class="chat-message">
+      <div class="sender">John:</div>
+      <div>Hey, how's it going?</div>
+    </div>
+    <div class="chat-message">
+      <div class="sender">Jane:</div>
+      <div>Not too bad, thanks for asking!</div>
+    </div>
+  </div>
+  <form class="chat-input flex">
+    <input type="text" placeholder="Type your message here..." class="flex-1 border border-gray-300 px-3 py-2 rounded-md">
+    <button type="submit" class="ml-2 bg-blue-500 text-white px-3 py-2 rounded-md hover:bg-blue-600">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8" />
+      </svg>
+    </button>
+  </form>
+</div>
 
-{% block content %}
-<h1>Chat Room: {{ room_name }}</h1>
-
-<div id="chat-messages"></div>
-
-<input type="text" id="chat-message-input">
-<button id="chat-message-submit">Send</button>
-
-<script>
-    var room_name = "{{ room_name }}";
-
-    var chatSocket = new WebSocket(
-        'ws://' + window.location.host +
-        '/ws/chat/' + room_name + '/'
-    );
-
-    chatSocket.onmessage = function(event) {
-        var message = JSON.parse(event.data);
-        var message_element = document.createElement('div');
-        message_element.innerHTML = message.message;
-        document.querySelector('#chat-messages').appendChild(message_element);
-    };
-
-    document.querySelector('#chat-message-input').focus();
-    document.querySelector('#chat-message-input').onkeyup = function(e) {
-        if (e.keyCode === 13) {  // Enter key
-            document.querySelector('#chat-message-submit').click();
-        }
-    };
-
-    document.querySelector('#chat-message-submit').onclick = function(e) {
-        var messageInputDom = document.querySelector('#chat-message-input');
-        var message = messageInputDom.value;
-        chatSocket.send(JSON.stringify({
-            'message': message
-        }));
-        messageInputDom.value = '';
-    };
-</script>
+{% endblock %}
+{% block right %}
+	<div>
+		<h2 class="text-lg font-bold mb-4">
+			<i class="fas fa-users mr-2"></i>
+			Members
+		</h2>
+		<ul>
+			{% for member in data.members %}
+			<li class="flex items-center mb-2">
+				<img src="{{ member.image }}" alt="{{ member.name }}" class="w-8 h-8 rounded-full mr-2">
+				{{ member.name }}
+			</li>
+			{% endfor %}
+		</ul>
+	</div>
 {% endblock %}
