--- a/devbuddy/base/templates/base/teamdetails.html
+++ b/devbuddy/base/templates/base/teamdetails.html
@@ -8,7 +8,7 @@
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/displayteam.css' %}">
 {% endblock %}
-{% block content %}
+{% block left %}
 
 <!-- add the team name in the header -->
 <h1 class="text-center">{{ team.name }}</h1>
@@ -40,4 +40,4 @@
 </div>
 
 
-{% endblock %}
+{% endblock left %}
