--- a/devbuddy/register/templates/authenticate/login.html
+++ b/devbuddy/register/templates/authenticate/login.html
@@ -2,10 +2,23 @@
 {% block title %}
 <title>DevBuddy | Login</title>
 {% endblock %} 
-{% block content %} 
-    <div class="row">
-        <div class="col-md-8 mx-auto social-container my-2 order-md-1">
-            login thru navbar link
+{% block left %} 
+    <section class="loginselect">
+        <div class="flex flex-col h-screen bg-gray-100">
+            <div class="grid place-items-center mx-2 my-20 sm:my-auto">
+                <div class="w-11/12 p-12 bg-white sm:w-8/12">
+                    <h1 class="text-xl font-semibold">Login to your account</h1>
+                    <form class="mt-6">
+                          <Link to="/api/social-auth">
+                        <button type="submit" class="w-full py-3 mt-6 font-small tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-gray-900 hover:shadow-none rounded">
+                            Login with Github
+                        </button>
+                        <button type="submit" class="w-full py-3 mt-6 font-small tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-gray-900 hover:shadow-none rounded">
+                            Login as Organisation
+                        </button>
+                    </form>
+                </div>
+            </div>
         </div>
-    </div>
-{% endblock %}
+    </section>
+{% endblock left %}
