--- a/devbuddy/templates/base.html
+++ b/devbuddy/templates/base.html
@@ -27,6 +27,9 @@
         <div class="navbar-right">
             <ul>
                 {% if user.is_authenticated %}
+                    <li>
+                        <a href="{% url 'profile' %}" class="btn btn-success">Profile</a>
+                    </li>
                     <li><a href="{% url 'logout' %}" class="btn btn-success">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'social:begin' 'github' %}" class="btn btn-success">Login</a></li>
@@ -37,12 +40,21 @@
     </nav>
     {% endblock navbar %}
 
-    {% block content %}
-    {% endblock %} 
+    <div class="flex flex-row h-screen w-full">
+        <div class="flex flex-row w-70 h-screen bg-white p-6 shadow-md">
+          {% block left %}
+          {% endblock %}
+        </div>
+        <div class="flex flex-row w-30 h-screen bg-gray-100 p-6 shadow-md">
+          {% block right %}
+          {% endblock %}
+        </div>
+    </div>
 
     <script src="{% static 'js/base.js' %}"></script>
     {% block scripts %}
     {% endblock %}
+    <script src="https://kit.fontawesome.com/ccf941b7da.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
