--- a/devbuddy/register/templates/authenticate/login.html
+++ b/devbuddy/register/templates/authenticate/login.html
@@ -5,17 +5,16 @@
 {% block left %} 
     <section class="loginselect">
         <div class="flex flex-col h-screen bg-gray-100">
-            <div class="grid place-items-center mx-2 my-20 sm:my-auto">
-                <div class="w-11/12 p-12 bg-white sm:w-8/12">
-                    <h1 class="text-xl font-semibold">Login to your account</h1>
-                    <form class="mt-6">
-                          <Link to="/api/social-auth">
-                        <button type="submit" class="w-full py-3 mt-6 font-small tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-gray-900 hover:shadow-none rounded">
-                            Login with Github
-                        </button>
-                        <button type="submit" class="w-full py-3 mt-6 font-small tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-gray-900 hover:shadow-none rounded">
-                            Login as Organisation
-                        </button>
+            <div class="grid place-items-center mx-2 my-20">
+                <div class="w-full p-12 bg-white">
+                    <h1 class="text-xl text-center font-semibold">Login to your account</h1>
+                    <form class="mt-6 flex flex-col">
+                        <a href="{% url 'social:begin' 'github' %}" class="text-center w-full p-3 my-6 font-small tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-gray-900 hover:shadow-none rounded">
+                            Login with Github <i class="fa-brands fa-github"></i>
+                        </a>
+                        <a href="{% url 'registerOrg' %}" class="text-center w-full p-3 font-small tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-gray-900 hover:shadow-none rounded">
+                            Login as Organisation <i class="fa-solid fa-building"></i>
+                        </a>
                     </form>
                 </div>
             </div>
