--- a/devbuddy/static/css/login.css
+++ b/devbuddy/static/css/login.css
@@ -211,3 +211,7 @@ img {
 .main .wrapper .method-action:hover {
   background: var(--color-light);
 }/*# sourceMappingURL=login.css.map */
+
+.w-70 {
+  width: 100%;
+}
