--- a/devbuddy/base/templates/base/displayteams.html
+++ b/devbuddy/base/templates/base/displayteams.html
@@ -3,12 +3,10 @@
 {% block title %} 
 <title>DevBuddy | {{username}}</title> 
 {% endblock %} 
-{% block css %}  {% endblock %}
+{% block css %} <link rel="stylesheet" href="displayteam.css"> {% endblock %}
 {% block left %}
  <!-- make a bs5 table for all the teams -->
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
                 <h1 class="text-center">{{username}}</h1>
                 <hr>
                 <table class="table table-hover">
@@ -16,9 +14,9 @@
                         <tr>
                             <th>Team Name</th>
                             <th>Team Leader</th>
-                            <th>Team Members</th>
                             <th>Team Description</th>
                             <th>View Details</th>
+                            <th>Projects</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -26,17 +24,12 @@
                         <tr>
                             <td>{{team.name}}</td>
                             <td>{{team.teamleader}}</td>
-                            <td>
-                                {% for id in id_list %}
-                                {{ id }} 
-                                {% endfor %}
-                            </td>
                             <td>{{team.description}}</td>
                             <td><a href="{% url 'team' team.id %}" class="btn btn-primary">View Details</a></td>
+                            <td><a href="{% url 'project'  %}" class="btn btn-primary">View Projects</a></td>
                         </tr>
                         {% endfor %}
                     </tbody>
                 </table>
-            </div>
         </div>
 {% endblock left %}
