--- a/devbuddy/base/templates/base/tag.html
+++ b/devbuddy/base/templates/base/tag.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/tag.css' %}">
+{% endblock %}
 {% block left %}
 <div class="mb-3">
     <form action="" method="POST">
@@ -9,10 +13,15 @@
   <input type="text" class="form-control" name="username" >
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
- 
 </div>
+{% endblock %}
+{% block right %}
+<div class="outer">
+  <div class="inner">
+<h2>Recommended User</h2></div>
 {% for id in ids %}
-<p>{{id}}</p>
+<div class="inner"><p>{{id}}, </p></div>
 {% endfor %}
+</div>
 
 {% endblock %}
