--- a/devbuddy/register/templates/authenticate/login.html
+++ b/devbuddy/register/templates/authenticate/login.html
@@ -12,7 +12,7 @@
                         <a href="{% url 'social:begin' 'github' %}" class="text-center w-full p-3 my-6 font-small tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-gray-900 hover:shadow-none rounded">
                             Login with Github <i class="fa-brands fa-github"></i>
                         </a>
-                        <a href="{% url 'registerOrg' %}" class="text-center w-full p-3 font-small tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-gray-900 hover:shadow-none rounded">
+                        <a href="{% url 'loginOrg' %}" class="text-center w-full p-3 font-small tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-gray-900 hover:shadow-none rounded">
                             Login as Organisation <i class="fa-solid fa-building"></i>
                         </a>
                     </form>
