--- a/devbuddy/static/css/profile.css
+++ b/devbuddy/static/css/profile.css
@@ -163,18 +163,18 @@ a:hover {
 }
 .profile-card-social__item {
   display: inline-flex;
-  width: 55px;
-  height: 55px;
   margin: 15px;
-  border-radius: 50%;
+  padding: 12px 15px;
+  border-radius: 100vw;
   align-items: center;
   justify-content: center;
   color: #fff;
   background: #405de6;
   box-shadow: 0px 7px 30px rgba(43, 98, 169, 0.5);
   position: relative;
-  font-size: 21px;
+  font-size: 12px;
   flex-shrink: 0;
+  transform: scale(1.1);
   transition: all 0.3s;
 }
 @media screen and (max-width: 768px) {
@@ -192,6 +192,17 @@ a:hover {
 .profile-card-social__item.facebook {
   background: linear-gradient(45deg, #3b5998, #0078d7);
   box-shadow: 0px 4px 30px rgba(43, 98, 169, 0.5);
+}
+.profile-card-social__item.tags {
+  font-weight: 700;
+  background: transparent;
+  border: 2px solid #6944ff;
+  color: #6944ff;
+  box-shadow: 0px 4px 30px rgba(43, 98, 169, 0.5);
+}
+.profile-card-social__item.tags:hover {
+  background: #6944ff;
+  color: #fff;
 }
 .profile-card-social__item.twitter {
   background: linear-gradient(45deg, #1da1f2, #0e71c8);
