--- a/devbuddy/static/css/searchhackathon.css
+++ b/devbuddy/static/css/searchhackathon.css
@@ -1,12 +1,16 @@
 .chat-input {
-  margin-top: 1rem;
+  display: flex;
+  flex-direction: col;
+  align-items: center;
+  width: 100%;
+  margin: 1rem;
 }
 
 .chat-input input {
-  flex: 1;
   border: 1px solid #ccc;
   border-radius: 0.25rem;
   padding: 0.5rem 1rem;
+  margin: 2rem;
 }
 
 .chat-input button {
@@ -20,4 +24,16 @@
 
 .chat-input button:hover {
   background-color: #0069d9;
+}
+
+.outer{
+  width: 100%;
+}
+
+.hackathon{
+  width: 100%;
+  height: 100%;
+  background-color: #f5f5f5;
+  padding: 1rem;
+  margin: 2rem;
 }
